--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,6 +9,23 @@ h1{
   color: white;
   text-align: center;
 }
+
+h2{
+  font-family: verdana;
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+  text-align: center;
+
+}
+.gray{
+  font-family: verdana;
+  font-weight: 200;
+  font-size: 21px;
+  color: gray;
+  text-align: center;
+
+}
 .bluelink {
   color: aquamarine;
   font-size: 16px;
@@ -17,4 +34,11 @@ h1{
 p{
   text-align: center;
   font-family: verdana;
+}
+.video{
+  text-align: center; 
+}
+
+#right{
+  text-align: right;
 }
